Added Navbar menu and styles
1. Added "NavbarMenu" and "NavbarButton" components to implement mobile menu on mobile devices.
2. Added styles for "NavbarMenu" and "NavbarButton" components
3. Added animation of mobile menu (NavbarMenu) using "framer-motion" library.
4. Added animation of the call/close button of the mobile menu.
5. Added mobile menu state and reducer to modify it in modalSlice.

--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,35 @@ img {
 .link {
   text-decoration: none;
 }
+
+.container {
+  width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 428px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1312px) {
+  .container {
+    width: 1184px;
+    padding-left: 64px;
+    padding-right: 64px;
+  }
+}
+
+main {
+  position: relative;
+}
