--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --secondary-black: #121417cc;
   --third-black: #121417b3;
   --primary-grey: #8a8a89;
+  --secondary-gray: #12141733;
   --green-price: #38cd3e;
   --accent-color: #9fbaae;
   --secondary-accent-color: #cbded3;
