Fix mobile menu visibility
fixed visibility of mobile navigation menu on tablet and desktop devices

--- a/src/index.css
+++ b/src/index.css
@@ -145,7 +145,7 @@ img {
   }
 }
 
-/* ==== Custom ToolTip styles: ====  */
+/** ==== Custom ToolTip styles: ==== **/
 
 main .favorite-tooltip {
   background-color: var(--error-color);
